--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^11.1.2",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "unstyled-lightbox": "^0.0.2-1"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
@@ -23,7 +24,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.3.7",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.15",
+    "tailwindcss": "^2.2.17",
     "typescript": "^4.4.3"
   }
 }
