--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.0.1",
     "unstyled-lightbox": "^0.0.2-1"
   },
   "devDependencies": {
