--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.5",
     "next": "^11.1.2",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.0.1",
-    "unstyled-lightbox": "^0.0.2-1"
+    "unstyled-lightbox": "^0.0.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
