--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@eosdacio/ual-wax": "^1.5.1",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
+    "@waxio/waxjs": "^1.0.4",
+    "anchor-link": "^3.3.4",
+    "anchor-link-browser-transport": "^3.2.5",
     "atomicassets": "^1.4.2",
+    "eosjs": "^22.1.0",
     "next": "^11.1.2",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
