--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "anchor-link-browser-transport": "^3.2.5",
     "atomicassets": "^1.4.2",
     "eosjs": "^22.1.0",
-    "next": "^11.1.2",
+    "next": "^12.0.3",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -26,15 +26,16 @@
     "unstyled-lightbox": "^0.0.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
-    "autoprefixer": "^10.3.5",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.3.7",
+    "postcss": "^8.3.11",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.17",
-    "typescript": "^4.4.3"
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.4.4"
   }
 }
