--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^12.0.3",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.18.0",
     "react-toastify": "^8.1.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
+    "@types/react-datepicker": "^4.3.2",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
