--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^12.0.3",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
+    "react-countdown": "^2.3.2",
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.18.0",
