--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@cryptopuppie/next-waxauth": "^0.1.0",
+    "@cryptopuppie/useeoschain": "^0.1.2",
     "@eosdacio/ual-wax": "^1.5.1",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
@@ -18,15 +19,15 @@
     "anchor-link-browser-transport": "^3.2.5",
     "atomicassets": "^1.4.2",
     "eosjs": "^22.1.0",
-    "next": "^12.0.3",
+    "next": "^12.0.7",
     "next-seo": "^4.28.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-datepicker": "^4.5.0",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^7.18.0",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.2",
     "react-toastify": "^8.1.0",
-    "swr": "^1.0.1",
+    "swr": "^1.1.2-beta.0",
     "unstyled-lightbox": "^0.0.3"
   },
   "devDependencies": {
@@ -34,13 +35,13 @@
     "@types/react-datepicker": "^4.3.2",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.0",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.2",
+    "eslint": "^8.4.1",
+    "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.3.11",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.19",
-    "typescript": "^4.4.4"
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.6",
+    "typescript": "^4.5.4"
   }
 }
